Link to recipe subpages

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+    
     <head>
 
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Odin Recipes</title>
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href="./recipes/tomato-soup.html">Tomato Soup</a>
+        <a href="./recipes/curry-pumpkin-soup.html">Curry Pumpkin Soup</a>
+        <a href="./recipes/mushroom-soup.html">Mushroom Soup</a>
     </body>
     
 </html>
