Style list & header, add footer

--- a/index.html
+++ b/index.html
@@ -1,18 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
     <head>
 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./styles.css">
         <title>Odin Recipes</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="./recipes/tomato-soup.html">Tomato Soup</a>
-        <a href="./recipes/curry-pumpkin-soup.html">Curry Pumpkin Soup</a>
-        <a href="./recipes/mushroom-soup.html">Mushroom Soup</a>
+        <header>
+            <img class="icon"src="./images/soup-icon-100.png">
+            <h1 class="header">Odin Recipes</h1>
+            <h2 class="header">soup-erior in every way</h2>
+        </header>        
+        <ul>
+            <li class="index-li">
+                <a href="./recipes/tomato-soup.html">
+                    <img class="thumbnail" src="./images/tomato-soup.jpg" alt="a bowl of tomato soup"> 
+                    <p>Tomato Soup</p>
+                </a>
+            </li>
+            <li class="index-li">
+                <a href="./recipes/curry-pumpkin-soup.html">
+                    <img class="thumbnail" src="./images/curry-pumpkin-soup.jpg" alt="a bowl of pumpkin soup">
+                    <p>Curry Pumpkin Soup</p>
+                </a>
+            </li>
+            <li class="index-li">
+                <a href="./recipes/mushroom-soup.html">
+                    <img class="thumbnail" src="./images/mushroom-soup.jpg" alt="a bowl of mushroom soup">
+                    <p>Mushroom Soup</p>
+                </a>
+            </li>
+        </ul>
     </body>
+
+    <footer>
+        Code by <strong>Sabrina</strong> | <a target="_blank" href="https://icons8.com/icon/t3z86GnXSIyW/suppenteller">Suppenteller</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+    </footer>
     
 </html>
