Make recipe cards clickable & edit content

--- a/index.html
+++ b/index.html
@@ -11,29 +11,41 @@
 
     <body>
         <header>
-            <img class="icon"src="./images/soup-icon-100.png">
-            <h1 class="header">Odin Recipes</h1>
-            <h2 class="header">soup-erior in every way</h2>
+            <img id="header-icon" src="./images/soup-icon-100.png">
+            <h1>Odin Recipes</h1>
+            <h2>soup-erior in every way</h2>
         </header>        
-        <ul>
-            <li class="index-li">
-                <a href="./recipes/tomato-soup.html">
+        <ul class="recipe-list">
+            <a class="recipe-link" href="./recipes/tomato-soup.html">
+                <li class="recipe-card">
                     <img class="thumbnail" src="./images/tomato-soup.jpg" alt="a bowl of tomato soup"> 
                     <p>Tomato Soup</p>
-                </a>
-            </li>
-            <li class="index-li">
-                <a href="./recipes/curry-pumpkin-soup.html">
+                    <ul class="servings-time">
+                        <li class="servings">4</li>
+                        <li class="time">45 mins</li>
+                    </ul>
+                </li>
+            </a>
+            <a class="recipe-link" href="./recipes/curry-pumpkin-soup.html">
+                <li class="recipe-card">
                     <img class="thumbnail" src="./images/curry-pumpkin-soup.jpg" alt="a bowl of pumpkin soup">
                     <p>Curry Pumpkin Soup</p>
-                </a>
-            </li>
-            <li class="index-li">
-                <a href="./recipes/mushroom-soup.html">
+                    <ul class="servings-time">
+                        <li class="servings">8</li>
+                        <li class="time">20 mins</li>
+                    </ul>
+                </li>
+            </a>
+            <a class="recipe-link" href="./recipes/mushroom-soup.html">
+                <li class="recipe-card">                
                     <img class="thumbnail" src="./images/mushroom-soup.jpg" alt="a bowl of mushroom soup">
                     <p>Mushroom Soup</p>
-                </a>
-            </li>
+                    <ul class="servings-time">
+                        <li class="servings">4</li>
+                        <li class="time">30 mins</li>
+                    </ul>
+                </li>
+            </a>        
         </ul>
     </body>
 
