Add icons and icon credit

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a class="recipe-link" href="./recipes/tomato-soup.html">
                 <li class="recipe-card">
                     <img class="thumbnail" src="./images/tomato-soup.jpg" alt="a bowl of tomato soup"> 
-                    <p>Tomato Soup</p>
+                    <h3>Tomato Soup</h3>
                     <ul class="servings-time">
                         <li class="servings">4</li>
                         <li class="time">45 mins</li>
@@ -29,7 +29,7 @@
             <a class="recipe-link" href="./recipes/curry-pumpkin-soup.html">
                 <li class="recipe-card">
                     <img class="thumbnail" src="./images/curry-pumpkin-soup.jpg" alt="a bowl of pumpkin soup">
-                    <p>Curry Pumpkin Soup</p>
+                    <h3>Curry Pumpkin Soup</h3>
                     <ul class="servings-time">
                         <li class="servings">8</li>
                         <li class="time">20 mins</li>
@@ -39,7 +39,7 @@
             <a class="recipe-link" href="./recipes/mushroom-soup.html">
                 <li class="recipe-card">                
                     <img class="thumbnail" src="./images/mushroom-soup.jpg" alt="a bowl of mushroom soup">
-                    <p>Mushroom Soup</p>
+                    <h3>Mushroom Soup</h3>
                     <ul class="servings-time">
                         <li class="servings">4</li>
                         <li class="time">30 mins</li>
@@ -50,7 +50,7 @@
     </body>
 
     <footer>
-        Code by <strong>Sabrina</strong> | <a target="_blank" href="https://icons8.com/icon/t3z86GnXSIyW/suppenteller">Suppenteller</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+        Code by <strong>Sabrina</strong> | <a target="_blank" href="https://icons8.com/icon/t3z86GnXSIyW/soup-plate">Soup Plate</a> icon, <a target="_blank" href="https://icons8.com/icon/68637/tableware">Tableware</a> icon, and <a target="_blank" href="https://icons8.com/icon/59760/clock">Clock</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
     </footer>
     
 </html>
