Turn header content into home link

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
     <body>
         <header>
-            <img id="header-icon" src="./images/soup-icon-100.png">
-            <h1>Odin Recipes</h1>
-            <h2>soup-erior in every way</h2>
+            <a class="header" href="./index.html">
+                <img id="header-icon" src="./images/soup-icon-100.png">
+                <h1>Odin Recipes</h1>
+                <h2>soup-erior in every way</h2>
+            </a>
         </header>        
         <ul class="recipe-list">
             <a class="recipe-link" href="./recipes/tomato-soup.html">
