Style recipe pages & change background

--- a/recipes/mushroom-soup.html
+++ b/recipes/mushroom-soup.html
@@ -1,40 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-with, initial-scale=1.0">
-    <title>Mushroom Soup</title>
-</head>
 
-<body>
-    <h1>Mushroom Soup</h1>
-    <img src="../images/mushroom-soup.jpg" alt="a bowl of mushroom soup">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-with, initial-scale=1.0">
+        <title>Mushroom Soup</title>
+        <link rel="stylesheet" href="../styles.css">
+    </head>
 
-    <h2>Description</h2>
-    <p>If you are looking for a deliciously creamy soup that will fill your belly with warmth and your heart with love, you have found it.</p>
+    <body>
 
-    <h2>Ingredients</h2>
-    <ul>
-        <li>1 pound fresh mushrooms</li>
-        <li>¼ cup salted butter</li>
-        <li>4 green onions, thinly sliced</li>
-        <li>3 cloves garlic, chopped</li>
-        <li>1 teaspoon chopped fresh thyme</li>
-        <li>2 tablespoons all-purpose flour</li>
-        <li>4 cups vegetable broth</li>
-        <li>1 cup light cream</li>
-        <li>salt and pepper to taste</li>
-        <li>1 spring fresh thyme leaves</li>
-        <li>1 tablespoon fresh chives</li>
-    </ul>
+        <header>
+            <a class="header" href="./../index.html">
+                <img id="header-icon" src="../images/soup-icon-100.png">
+                <h1>Odin Recipes</h1>
+                <h2>soup-erior in every way</h2>
+            </a>
+        </header> 
 
-    <h2>Steps</h2>
-    <ol>
-        <li>Thinly slice the mushroom caps, discarding the stalks.</li>
-        <li>Melt the butter in a heavy-based pan and cook the spring onion, garlic and lemon thyme, stirring, for 1 minute, or until the garlic is golden. Add the mushroom and salt and white pepper. Cook for 3 to 4 minutes, or until the mushroom just softens. Add flour and cook, stirring for 1 minute.</li>
-        <li>Remove from the heat and add the stock, stirring continuously. Return to the heat and bring to the boil, stirring. Reduce the heat and simmer gently for 2 minutes, stirring occasionally.</li>
-        <li>Whisk the cream into the soup, then reheat gently, stirring. Do not allow the soup to boil. Season to taste with salt and pepper, and garnish with the chopped chives and thyme.</li>
-    </ol>
-</body>
+        <div class="recipe-intro">
+            <img class="soup-photo" src="../images/mushroom-soup.jpg" alt="a bowl of mushroom soup">
+            <div class="intro-text">
+                <h1>Mushroom Soup</h>
+                <h2>Description</h2>
+                <p>If you are looking for a deliciously creamy soup that will fill your belly with warmth and your heart with love, you have found it.</p>
+                <ul class="servings-time">
+                    <li class="servings">4</li>
+                    <li class="time">30 mins</li>
+                </ul>
+            </div>
+        </div>
+         
+        <div class="ingredients">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>1 pound fresh mushrooms</li>
+                <li>¼ cup salted butter</li>
+                <li>4 green onions, thinly sliced</li>
+                <li>3 cloves garlic, chopped</li>
+                <li>1 teaspoon chopped fresh thyme</li>
+                <li>2 tablespoons all-purpose flour</li>
+                <li>4 cups vegetable broth</li>
+                <li>1 cup light cream</li>
+                <li>salt and pepper to taste</li>
+                <li>1 spring fresh thyme leaves</li>
+                <li>1 tablespoon fresh chives</li>
+            </ul>
+        </div>
+
+        <div class="steps">
+            <h2>Steps</h2>
+            <ol>
+                <li>Thinly slice the mushroom caps, discarding the stalks.</li>
+                <li>Melt the butter in a heavy-based pan and cook the spring onion, garlic and lemon thyme, stirring, for 1 minute, or until the garlic is golden. Add the mushroom and salt and white pepper. Cook for 3 to 4 minutes, or until the mushroom just softens. Add flour and cook, stirring for 1 minute.</li>
+                <li>Remove from the heat and add the stock, stirring continuously. Return to the heat and bring to the boil, stirring. Reduce the heat and simmer gently for 2 minutes, stirring occasionally.</li>
+                <li>Whisk the cream into the soup, then reheat gently, stirring. Do not allow the soup to boil. Season to taste with salt and pepper, and garnish with the chopped chives and thyme.</li>
+            </ol>
+        </div>
+
+    <footer>
+        Code by <strong>Sabrina</strong> | <a target="_blank" href="https://icons8.com/icon/t3z86GnXSIyW/soup-plate">Soup Plate</a> icon, <a target="_blank" href="https://icons8.com/icon/68637/tableware">Tableware</a> icon, and <a target="_blank" href="https://icons8.com/icon/59760/clock">Clock</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+    </footer>
+
+    </body>
 
 </html>
