--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
     <head>
-
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./styles.css">
@@ -10,49 +9,54 @@
     </head>
 
     <body>
+
         <header>
             <a class="header" href="./index.html">
                 <img id="header-icon" src="./images/soup-icon-100.png">
                 <h1>Odin Recipes</h1>
                 <h2>soup-erior in every way</h2>
             </a>
-        </header>        
-        <ul class="recipe-list">
-            <a class="recipe-link" href="./recipes/tomato-soup.html">
-                <li class="recipe-card">
-                    <img class="thumbnail" src="./images/tomato-soup.jpg" alt="a bowl of tomato soup"> 
-                    <h3>Tomato Soup</h3>
-                    <ul class="servings-time">
-                        <li class="servings">4</li>
-                        <li class="time">45 mins</li>
-                    </ul>
-                </li>
-            </a>
-            <a class="recipe-link" href="./recipes/curry-pumpkin-soup.html">
-                <li class="recipe-card">
-                    <img class="thumbnail" src="./images/curry-pumpkin-soup.jpg" alt="a bowl of pumpkin soup">
-                    <h3>Curry Pumpkin Soup</h3>
-                    <ul class="servings-time">
-                        <li class="servings">8</li>
-                        <li class="time">20 mins</li>
-                    </ul>
-                </li>
-            </a>
-            <a class="recipe-link" href="./recipes/mushroom-soup.html">
-                <li class="recipe-card">                
-                    <img class="thumbnail" src="./images/mushroom-soup.jpg" alt="a bowl of mushroom soup">
-                    <h3>Mushroom Soup</h3>
-                    <ul class="servings-time">
-                        <li class="servings">4</li>
-                        <li class="time">30 mins</li>
-                    </ul>
-                </li>
-            </a>        
-        </ul>
-    </body>
+        </header>
 
-    <footer>
-        Code by <strong>Sabrina</strong> | <a target="_blank" href="https://icons8.com/icon/t3z86GnXSIyW/soup-plate">Soup Plate</a> icon, <a target="_blank" href="https://icons8.com/icon/68637/tableware">Tableware</a> icon, and <a target="_blank" href="https://icons8.com/icon/59760/clock">Clock</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
-    </footer>
+        <main>
+            <ul class="recipe-list">
+                <a class="recipe-link" href="./recipes/tomato-soup.html">
+                    <li class="recipe-card">
+                        <img class="thumbnail" src="./images/tomato-soup.jpg" alt="a bowl of tomato soup"> 
+                        <h3>Tomato Soup</h3>
+                        <ul class="servings-time">
+                            <li class="servings">4</li>
+                            <li class="time">45 mins</li>
+                        </ul>
+                    </li>
+                </a>
+                <a class="recipe-link" href="./recipes/curry-pumpkin-soup.html">
+                    <li class="recipe-card">
+                        <img class="thumbnail" src="./images/curry-pumpkin-soup.jpg" alt="a bowl of pumpkin soup">
+                        <h3>Curry Pumpkin Soup</h3>
+                        <ul class="servings-time">
+                            <li class="servings">8</li>
+                            <li class="time">20 mins</li>
+                        </ul>
+                    </li>
+                </a>
+                <a class="recipe-link" href="./recipes/mushroom-soup.html">
+                    <li class="recipe-card">                
+                        <img class="thumbnail" src="./images/mushroom-soup.jpg" alt="a bowl of mushroom soup">
+                        <h3>Mushroom Soup</h3>
+                        <ul class="servings-time">
+                            <li class="servings">4</li>
+                            <li class="time">30 mins</li>
+                        </ul>
+                    </li>
+                </a>        
+            </ul>
+        </main>            
+
+        <footer>
+            Code by <strong>Sabrina</strong> | <a target="_blank" href="https://icons8.com/icon/t3z86GnXSIyW/soup-plate">Soup Plate</a> icon, <a target="_blank" href="https://icons8.com/icon/68637/tableware">Tableware</a> icon, and <a target="_blank" href="https://icons8.com/icon/59760/clock">Clock</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+        </footer>
+
+    </body>
     
 </html>
