Add category tags to recipes

--- a/recipes/curry-pumpkin-soup.html
+++ b/recipes/curry-pumpkin-soup.html
@@ -22,7 +22,8 @@
             <img class="soup-photo" src="../images/curry-pumpkin-soup.jpg" alt="a bowl of pumpkin soup">
             <div class="intro-text">
                 <h1>Curry Pumpkin Soup</h1>    
-                <h2>Description</h2>
+                <h2 class="description-h2">Description</h2>
+                <div class="tags"><span>vegetarian</span> <span>savory</span> <span>spicy</span></div>
                 <p>This is a wonderfully soothing and savory soup - a perfect choice for a holiday party or dinner.</p>
                 <ul class="servings-time">
                     <li class="servings">8</li>
