--- a/recipes/mushroom-soup.html
+++ b/recipes/mushroom-soup.html
@@ -22,7 +22,8 @@
             <img class="soup-photo" src="../images/mushroom-soup.jpg" alt="a bowl of mushroom soup">
             <div class="intro-text">
                 <h1>Mushroom Soup</h>
-                <h2>Description</h2>
+                <h2 class="description-h2">Description</h2>
+                <div class="tags"><span>vegetarian</span> <span>savory</span></div>
                 <p>If you are looking for a deliciously creamy soup that will fill your belly with warmth and your heart with love, you have found it.</p>
                 <ul class="servings-time">
                     <li class="servings">4</li>
