--- a/recipes/tomato-soup.html
+++ b/recipes/tomato-soup.html
@@ -21,7 +21,8 @@
             <img class="soup-photo" src="../images/tomato-soup.jpg" alt="a bowl of tomato soup">
             <div class="intro-text">
                 <h1>Tomato Soup</h1>
-                <h2>Description</h2>
+                <h2 class="description-h2">Description</h2>
+                <div class="tags"><span>vegetarian</span> <span>savory</span></div>
                 <p>A soup as rich as it is simple. The ideal dish for anyone with a healthy appetite and limited cooking skills.</p>
                 <ul class="servings-time">
                     <li class="servings">4</li>
