Add 6 more recipe cards and subpages

--- a/index.html
+++ b/index.html
@@ -49,6 +49,66 @@
                             <li class="time">30 mins</li>
                         </ul>
                     </li>
+                </a> 
+                <a class="recipe-link" href="./recipes/fennel-soup.html">
+                    <li class="recipe-card">
+                        <img class="thumbnail" src="./images/fennel-soup.jpg" alt="a bowl of fennel soup">
+                        <h3>Fennel Soup</h3>
+                        <ul class="servings-time">
+                            <li class="servings">4</li>
+                            <li class="time">1 h</li>
+                        </ul>
+                    </li>
+                </a>  
+                <a class="recipe-link" href="./recipes/broccoli-soup.html">
+                    <li class="recipe-card">
+                        <img class="thumbnail" src="./images/broccoli-soup.jpg" alt="a bowl of broccoli soup">
+                        <h3>Broccoli Soup</h3>
+                        <ul class="servings-time">
+                            <li class="servings">4</li>
+                            <li class="time">35 mins</li>
+                        </ul>
+                    </li>
+                </a> 
+                <a class="recipe-link" href="./recipes/french-onion-soup.html">
+                    <li class="recipe-card">
+                        <img class="thumbnail" src="./images/french-onion-soup.jpg" alt="a bowl of French onion soup">
+                        <h3>French Onion Soup</h3>
+                        <ul class="servings-time">
+                            <li class="servings">4</li>
+                            <li class="time">55 mins</li>
+                        </ul>
+                    </li>
+                </a>   
+                <a class="recipe-link" href="./recipes/green-velvet-soup.html">
+                    <li class="recipe-card">
+                        <img class="thumbnail" src="./images/green-velvet-soup.jpg" alt="a bowl of green soup">
+                        <h3>Green Velvet Soup</h3>
+                        <ul class="servings-time">
+                            <li class="servings">8</li>
+                            <li class="time">1 h 30 mins</li>
+                        </ul>
+                    </li>
+                </a>  
+                <a class="recipe-link" href="./recipes/carrot-soup.html">
+                    <li class="recipe-card">
+                        <img class="thumbnail" src="./images/carrot-soup.jpg" alt="a bowl of carrot soup">
+                        <h3>Carrot Soup</h3>
+                        <ul class="servings-time">
+                            <li class="servings">4</li>
+                            <li class="time">30 mins</li>
+                        </ul>
+                    </li>
+                </a>
+                <a class="recipe-link" href="./recipes/cheese-soup.html">
+                    <li class="recipe-card">
+                        <img class="thumbnail" src="./images/cheese-soup.jpg" alt="a bowl of cheese soup">
+                        <h3>Cheese Soup</h3>
+                        <ul class="servings-time">
+                            <li class="servings">6</li>
+                            <li class="time">30 mins</li>
+                        </ul>
+                    </li>
                 </a>        
             </ul>
         </main>            
