--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
                     <header>
                         <a class="header" href="./index.html">
                             <img id="header-icon" src="./images/soup-icon-100.png" alt="soup symbol">
-                            <h1>Odin Recipes</h1>
-                            <h2>soup-erior in every way</h2>
+                            <div class="heading">
+                                <h1>Odin Recipes</h1>
+                                <h2>soup-erior in every way</h2>
+                            </div>
                         </a>
                     </header>
 
