Add media query and update subpages

--- a/recipes/fennel-soup.html
+++ b/recipes/fennel-soup.html
@@ -10,12 +10,14 @@
 
     <body>
         <header>
-            <a class="header" href="./../index.html">
-                <img id="header-icon" src="../images/soup-icon-100.png">
-                <h1>Odin Recipes</h1>
-                <h2>soup-erior in every way</h2>
+            <a class="header" href="../index.html">
+                <img id="header-icon" src="../images/soup-icon-100.png" alt="soup symbol">
+                <div class="heading">
+                    <h1>Odin Recipes</h1>
+                    <h2>soup-erior in every way</h2>
+                </div>
             </a>
-        </header> 
+        </header>
 
         <div class="recipe-intro">
             <img class="soup-photo" src="../images/fennel-soup.jpg" alt="a bowl of fennel soup">
