--- a/recipes/mushroom-soup.html
+++ b/recipes/mushroom-soup.html
@@ -9,14 +9,16 @@
     </head>
 
     <body>
-
         <header>
-            <a class="header" href="./../index.html">
-                <img id="header-icon" src="../images/soup-icon-100.png">
-                <h1>Odin Recipes</h1>
-                <h2>soup-erior in every way</h2>
+            <a class="header" href="../index.html">
+                <img id="header-icon" src="../images/soup-icon-100.png" alt="soup symbol">
+                <div class="heading">
+                    <h1>Odin Recipes</h1>
+                    <h2>soup-erior in every way</h2>
+                </div>
             </a>
-        </header> 
+        </header>
+        
 
         <div class="recipe-intro">
             <img class="soup-photo" src="../images/mushroom-soup.jpg" alt="a bowl of mushroom soup">
